# Programming-III-Project

./: CMakeLists.txt  README.md  Rúbrica.html  functions.cpp  inverted.cpp  main.cpp  nodo.cpp  pelicula.cpp  streaming.cpp
archivos/: cuentas.txt
back/: main.cpp
back/src/: functions.cpp  gestor_archivos.cpp  main.cpp  streaming.cpp
back/src/archivos/: cuentas.txt
back/src/inverted_trie/: inverted.cpp
back/src/login/: cuenta.cpp  cuenta.h
docs/: README.md  Rúbrica.html
my-project/: package-lock.json
my-project/src/: App.jsx  Login.jsx  buscarPelicula.jsx  main.jsx
src/: CMakeLists.txt  functions.cpp  functions.h  gestor_archivos.cpp  gestor_archivos.h  main.cpp  pelicula.cpp  streaming.cpp
src/Login/: credenciales.cpp  credenciales.h  cuentas.cpp  cuentas.h
src/inverted_trie/: inverted.cpp  nodo.cpp
src/login/: autenticacion.cpp  autenticacion.h  credenciales.cpp  credenciales.h  cuenta.cpp  cuenta.h  cuentas.cpp  cuentas.h  gestor_cuentas.cpp  gestor_cuentas.h
